--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,8 @@
 .App {
   text-align: center;
-  background-image: url("./Imagen/341-3415989_comida-wallpaper.jpg");
+  background-image: url("./Imagen/fastfood-hand-drawn-doodles-seamless-2392480.jpg");
   background-size: cover;
+  height: 800px;
 
 }
 
