--- a/client/src/CSS/Search.css
+++ b/client/src/CSS/Search.css
@@ -1,11 +1,31 @@
-.Contenedor-search{
-    display: flex;
-    width: 100%;
+.contains-search{
+    display:flex;
+    justify-content:center;
     align-items: center;
-    justify-content: center;
+    padding-bottom: 20px;
 }
 
-.form-search{
-    display: flex;
-    flex-direction: row;
+.input-search{
+    padding: 6px;
+    margin: 5px;
+    border:none;
+    border-radius: 4px;
 }
+
+.btnSearch{
+    padding: 7px;
+    margin: 5px;
+    border: none;
+    border-radius: 4px;
+    transition: 0.6s;
+    background-color: rgba(84, 143, 30, 0.767);
+    font-weight: bolder;
+    cursor: pointer;
+}
+
+.btnSearch:hover{
+    background-color: rgb(75, 146, 9);
+    box-shadow: 1px 1px 10px 5px rgb(39, 39, 39);
+}
+
+
