--- a/client/src/CSS/LandingPage.css
+++ b/client/src/CSS/LandingPage.css
@@ -1,5 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap');
 
+
 .contenedorLanding{
     display: flex;
     align-items: center;
@@ -13,12 +14,12 @@
     background-color: rgba(240, 248, 255, 0.719);
     border-radius: 10px;
     padding: 3% 10% 3% 10%;
-    margin-top: 18%;
+    margin-top: 4%;
     font-family: 'Fredericka the Great', cursive;
     font-weight: bolder;
     align-items: center;
     justify-content: center;
-    box-shadow: 5px 5px 10px 10px rgba(236, 186, 20, 0.753);
+    box-shadow: 5px 5px 10px 10px rgb(253, 194, 0);
 }
 
 .titulo-landingP{
