--- a/client/src/CSS/Detail.css
+++ b/client/src/CSS/Detail.css
@@ -2,8 +2,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
-    height: 800px;
+    height: 1000px;
 }
 
 .detail-contains{
@@ -15,6 +14,7 @@
     align-items: center;
     text-align: center;
     color:#000;
+    border-radius: 20px;
     border-style:outset;
     border-color: rgb(240, 185, 4);
     border-width: 7px;
@@ -42,4 +42,5 @@
     border-radius: 10px; 
     box-shadow: 3px 3px 6px 6px rgb(253, 194, 0);
     cursor: pointer;
+    margin-top: 10px;
 }
