--- a/client/src/CSS/Detail.css
+++ b/client/src/CSS/Detail.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Fredericka+the+Great&display=swap');
+
 .super-contenedor{
     display: flex;
     flex-direction: column;
@@ -18,6 +20,7 @@
     border-style:outset;
     border-color: rgb(240, 185, 4);
     border-width: 7px;
+    padding: 2%;
 }
 
 .info-detail{
@@ -43,4 +46,5 @@
     box-shadow: 3px 3px 6px 6px rgb(253, 194, 0);
     cursor: pointer;
     margin-top: 10px;
+    font-family: 'Fredericka the Great', cursive;
 }
