--- a/client/src/CSS/Home.css
+++ b/client/src/CSS/Home.css
@@ -4,6 +4,11 @@
     font-family: 'Fredericka the Great', cursive;
     padding: 2%;
 }
+.header-home{
+    display: flex;
+    flex-direction: row;
+    margin: 0% 3% 0% 2%;
+}
 
 .btn-home{
     text-decoration: none;
@@ -12,6 +17,9 @@
     color:white;
     transition: 0.4s;
     cursor: pointer;
+    display: flex;
+    align-self: center;
+    margin-left: 40%;
 }
 
 .btn-home:hover{
@@ -63,3 +71,4 @@
     align-items: center;
     justify-content: center;
 }
+
